# ChangeLog for dev-libs/libf2c
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libf2c/ChangeLog,v 1.26 2008/07/08 17:17:59 dberkholz Exp $

  08 Jul 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  libf2c-20070912.ebuild:
  Explicitly specify RDEPEND so unzip doesn't get sucked into it (Sébastien
  Fabbro).

  08 Jul 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  libf2c-20070912.ebuild:
  Fix minor syntax errors.

*libf2c-20070912 (08 Jul 2008)

  08 Jul 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  +files/20070912-link-shared-libf2c-correctly.patch,
  +libf2c-20070912.ebuild:
  Bump to latest upstream code. (#164397) Provide SONAME in libf2c.so. Also
  links libf2c with libm so we don't get any undefined symbols.

  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing kugelfang from metadata.xml as per #46972.

  23 Aug 2007; Roy Marples <uberlord@gentoo.org> libf2c-20051004.ebuild:
  Keyworded ~x86-fbsd.

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

*libf2c-20051004 (14 May 2006)

  14 May 2006; Donnie Berkholz <spyderous@gentoo.org>;
  +files/20051004-add-ofiles-dep.patch, +libf2c-20051004.ebuild:
  Bump. Changes: Work correctly when writing to a file after reading from it;
  Add libf2c.so makefile rule; Stop forcing the rounding precision on x86
  (only affects use of 'f2c -trapuv'). Also, mirror a versioned zip file
  instead of the unversioned upstream one.

  10 Sep 2005; Aron Griffis <agriffis@gentoo.org> libf2c-20021004-r1.ebuild:
  Mark 20021004-r1 stable on alpha

  15 May 2005; Danny van Dyk <kugelfang@gentoo.org>
  libf2c-20021004-r1.ebuild:
  Inherits toolchain-funcs now instead of deprecated gcc eclass.

  05 May 2005; Danny van Dyk <kugelfang@gentoo.org>
  libf2c-20021004-r1.ebuild, -libf2c-20021004.ebuild:
  Removed libf2c-20021004. Fixed DEPEND in -r1, (thx to Jeremy Warren).
