@@ -1,11 +1,19 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 20051004-add-ofiles-dep.patch 439 RMD160 c4ca7645c0df795c8cc9be31cb6e9704a9b6285a SHA1 4453a9f1e4d59e87cd4a1a0ef1bc780bca6917d0 SHA256 3f688297b45515c1e386bb7f94ad36bf0f6a3497a0baff759b54d943cbec7d8f
-AUX 20070912-link-shared-libf2c-correctly.patch 318 RMD160 6af15cf8abbae4bcb8f332bcdd919be17fe507f5 SHA1 96e509069726ffd13c041af9871c966dd8a159b5 SHA256 eb961183fb741b4781e3253da874443ffdc47d32402871eab70d7b8fab57372f
+AUX 20070912-link-shared-libf2c-correctly.patch 344 RMD160 f8040f1f0fa5301edb8ef0ab37b23d13d3e3afb8 SHA1 076995d1f09eb80c4c8d893ed02f9c009e068ab3 SHA256 6a26f57fb2a8c6a5d15e494d382f3c9fbd714b459f0c539d0ac7d833e7a80a32
 AUX libf2c-20021004-shared-object.patch 1437 RMD160 677bdc26114f038423dece6d3e6db93fb2808060 SHA1 dce18f92aadbf760369bef276968f118c66521a9 SHA256 339c786cdada1f1c95505db5fd2529643dcade97b3213f93941e05e22c8e56b9
-DIST libf2c-20051004.zip 124001 RMD160 767567f0f0b487e3d2248bea7ba5918f45e6afc4 SHA1 fc6a883a64a0930db2c3126d9c43df56d48b4375 SHA256 0fc76f3b482273aae0ad084121f44cadff66502c03adce4cbf926f6222ace1f8
 DIST libf2c-20070912.zip 128622 RMD160 bc2da3c0a61583cca238995c43871cf2221aa404 SHA1 d84e692cc295adb45a80ae888db920b582fa49d6 SHA256 9403da6e0ea3f20012f351ff1525efd7fc0d696b82ab7219f711f21e73d09ec0
 DIST libf2c.zip 123393 RMD160 8407a1e801a136fd3388cbc71aab6c8b578100c7 SHA1 cafa2f1ef69b9e85d25cbc73ab2d82d1811e3fde SHA256 0a23ed0d677711c0e2691fc45422cfeaab08258c367fdd04854d4067d3058c06
-EBUILD libf2c-20021004-r1.ebuild 840 RMD160 ecffab45ed8f76d852696b8e62ffa3576e594265 SHA1 bf938212704875e1d9a61bfa09cfe2f45be6e07b SHA256 a3e1b36fbef890046b26f64e6f030e025b5799b6e2057b719b5c076fc6392a9d
-EBUILD libf2c-20051004.ebuild 1220 RMD160 561731b4adc25fd5407da610ea9a9bb0ac0bf8df SHA1 7cc8074dae7c0b95da1aff90fe9b3850c3e8c26d SHA256 bcc10e51ab6794e3b050c5457ceadef00f80fb65f4736f1908a17e86df111fb1
-EBUILD libf2c-20070912.ebuild 1366 RMD160 282cff60a707756e8520dbc08ffc894c057ef49b SHA1 306d48f3e33cab953b87494485d36c5a763f328b SHA256 3bc50f91176a1c8aa517c5ce854f3f31bf904f1187e1448ff9445b12b25ebaec
-MISC ChangeLog 3563 RMD160 e4ed04e26f3552a56cd278c8597a06f9d2e8c9d1 SHA1 e855c987e9c4638b9aaccc49181f48d5d5734b51 SHA256 c11e11b40ccc325e235f8de590eb309a622da38aed7ed2d4b0922232414d4729
+EBUILD libf2c-20021004-r1.ebuild 846 RMD160 e5c42792a85ebdf2b2769fe104a408d21ec83239 SHA1 d692153cf5fe7ee6b4cf34f05126a8c373ed6226 SHA256 5a626549fe6bde3e16c7c561e7038d41d83f6904f016cf45e4ed9a9d12561d07
+EBUILD libf2c-20070912.ebuild 1415 RMD160 e56afb356850ac4c0cf4f2ffbe01908d9b536ec6 SHA1 e0f258f26ae8fe439e655e141f85cd7509ce7d32 SHA256 4bdfc0202e00f92d13142ca0c3a16865aecf7f3c47af02add1cbf858e5150bcb
+MISC ChangeLog 3741 RMD160 c17112e89b7ccaf0dd2208613a9850b9851fef59 SHA1 d0f6b73cb37aa1a7f1eb29923fca82d3e013d3ec SHA256 8bc110886b5d877e1ed375acaf37a4ec47ea3727c5f7fa5541437169aa6bf206
 MISC metadata.xml 157 RMD160 ed43b99e7bf8bbf62cf4e46152138ab42d3a88c5 SHA1 2182a6de0b10959aad51af2990f1a6c69e34dd97 SHA256 750cb9e46ac2b77e1adf73de43c186a8c2d2234a9c6a89d9358d0969dc5cf8ac
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkkTB7QACgkQ1ycZbhPLE2CERACeL0Q45hch5+1RXDx+90DM7r0/
+8oQAnRot6irHh8/NORg0G5IiChO5g1T+
+=c/Wj
+-----END PGP SIGNATURE-----
