@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/libf2c
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libf2c/ChangeLog,v 1.26 2008/07/08 17:17:59 dberkholz Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libf2c/ChangeLog,v 1.27 2008/11/06 15:05:15 bicatali Exp $
+
+  06 Nov 2008; Sébastien Fabbro <bicatali@gentoo.org>
+  files/20070912-link-shared-libf2c-correctly.patch, libf2c-20070912.ebuild:
+  Really including soname into shared library
 
   08 Jul 2008; Donnie Berkholz <dberkholz@gentoo.org>;
   libf2c-20070912.ebuild:
